# organoid-shuffler

./: .gitignore  Microfluids1x1.md  Pipeline.ipynb  README.md  cnc_stepper_motor2 (1).py  eppendorf_0.5ml_adapter.stl  final_pipeline.ipynb  image_analysis.bak.ipynb  image_analysis.ipynb  image_analysis_sim.ipynb  pyproject.toml
config_files/: openframe_umanager_config.cfg
pump_controller_GUI/: pump_controller_gui.py  pump_settings.json
rtm/: __init__.py  microscope.py  motor.py  persistence.py  segmentation.py  tracking.py
