[project]
name = "code"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.31.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "napari-convpaint>=1.0.1",
    "napari-micromanager>=0.2.0",
    "napari-ome-zarr>=0.7.3",
    "napari[pyqt6]>=0.7.0",
    "numpy>=2.4.4",
    "ome-writers>=0.3.2",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pymmcore-plus>=0.18.1",
    "scikit-image>=0.26.0",
    "tifffile>=2026.4.11",
    "trackpy>=0.7",
    "zarr>=3",
]
